--- a/py-src/4.1_llm_with_condition.ipynb
+++ b/py-src/4.1_llm_with_condition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "892e7978",
    "metadata": {},
    "outputs": [
@@ -10,32 +10,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LLM Generated: Okay, here's a random fact for you:\n",
+      "LLM Generated: Okay, here's a fun one:\n",
       "\n",
-      "**Random Fact:** The shortest war in history lasted between 38 and 45 minutes. It was the Anglo-Zanzibar War on August 27, 1896.\n",
+      "Did you know that a **group of owls is called a parliament**?\n",
       "\n",
-      "---\n",
+      "Now for the joke part...\n",
       "\n",
-      "And now for the joke, which might not be directly related but will definitely make you chuckle about quick endings:\n",
-      "\n",
-      "Why did the invisible man turn down the job offer?\n",
-      "\n",
-      "... He couldn't see himself doing it!\n",
+      "Why did the owl get elected as the leader of the forest?\n",
+      "... Because he was excellent at *parliamentary procedure*!\n",
       "\n",
       "---\n",
       "\n",
-      "Alright, your turn! What happens next? 😄\n",
+      "So, what happens next with that fact and joke combo? Your move! 😄\n",
       "😄 That's a happy message!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'message': \"Why don't scientists trust atoms?\\n\\nBecause they make up everything!\",\n",
+       "{'message': 'Why did the scarecrow win an award?\\n\\nBecause he was outstanding in his field!',\n",
        " 'condition': 'Happy'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
